--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,15 @@
     <TextView
         android:id="@+id/tview"
         android:layout_width="wrap_content"
-        android:layout_height="30sp"
-        android:background="#d3d3d3"
+        android:layout_height="35sp"
+        android:background="#ff8ed38e"
         android:text="@string/hello_world" />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="35sp"
+        android:background="#ffd39310"
+        android:text="" />
 
     <Button
         android:id="@+id/iview"
